feat: replace onboarding with prototype 2 flow
